# cookiecutter-fastapi

./: .gitignore  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .pylintrc  package.sh  pyproject.toml
{{cookiecutter.project_slug}}/src/: api.py  lambda.py  main.py
{{cookiecutter.project_slug}}/src/utilities/: settings.py
{{cookiecutter.project_slug}}/test/: api_test.py
